<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00B85656"
    tools:context=".construccion">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">



<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center"
        android:text="@string/titulofogata" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="483dp"
        android:layout_height="358dp"
        app:srcCompat="@drawable/fog1" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="252dp"
        android:text="@string/par6" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="401dp"
        app:srcCompat="@drawable/fog2" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:text="@string/par7" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="391dp"
        app:srcCompat="@drawable/fog3" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="247dp"
        android:text="@string/par8" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/fog4" />



</LinearLayout>

    </ScrollView>
</FrameLayout>