<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gps"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="590dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="74dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="76dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"></LinearLayout>

                <LinearLayout
                    android:layout_width="214dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"></LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="92dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="76dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"></LinearLayout>

                <LinearLayout
                    android:layout_width="214dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="52dp"
                        android:background="#83CC26"
                        android:gravity="center"
                        android:text="@string/gps1"
                        android:textColor="#DBDEE2" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"></LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="102dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="113dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"></LinearLayout>

                <LinearLayout
                    android:layout_width="147dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/latitud"
                        android:layout_width="match_parent"
                        android:layout_height="62dp"
                        android:background="#83CC26"
                        android:gravity="center"
                        android:text="@string/gps2"
                        android:textColor="#DBDEE2" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"></LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="116dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="110dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"></LinearLayout>

                <LinearLayout
                    android:layout_width="153dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/longitud"
                        android:layout_width="match_parent"
                        android:layout_height="62dp"
                        android:background="#83CC26"
                        android:gravity="center"
                        android:text="@string/gps2"
                        android:textColor="#DBDEE2" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"></LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"></LinearLayout>

                <LinearLayout
                    android:layout_width="200dp"
                    android:layout_height="102dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/dir"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#83CC26"
                        android:textColor="#DBDEE2" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"></LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="Anterior"
                    android:text="@string/Regresar" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>